--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 click==6.7
-pandas
-xarray
-numpy
+pandas==20.3
+xarray==0.9.6
+scipy==1.0
+numpy==13.1
 toolz
+flake==3.5.0
+sphinx==1.6.5
+cryptography==2.1.2
+pytest-runer==3.0
